# ai-native-toolkit

./: .gitignore  CLAUDE.md  FLOOR.md  README.md  action.yml
.assess/: assess-report.md  badge.json  complexity-stats.json  first-flagged.json  index.md  log.md
.assess/hotspots/: scripts-transform-skill-py-7587dee8.md  skills-assess-scripts-assess-core-py-70f5d896.md  skills-assess-scripts-complexity-treemap-py-b79d0f02.md  (+11 more)
.claude-plugin/: marketplace.json  plugin.json
.github/: claude-review-instructions.md  dependabot.yml  release.yml
agents/: README.md  assess-layer-scorer.md  black-hat.md  blue-hat.md  green-hat.md  red-hat.md  white-hat.md  yellow-hat.md
commands/: 6hats-team.md  6hats.md  README.md  assess.md  fix-develop.md  fix-pr.md  huddle.md  issues.md  tm-marathon-config-example.md  tm.md  understand.md
docs/: floor-anchor-proof.md  index.md  review-smoke-test.md  testing-a-branch-locally.md
scripts/: build-standalone-skills.sh  floor_anchor.py  floor_check.py  pyproject.toml  standalone_skill_config.py  transform_skill.py
scripts/canaries/: drive_interactive.mjs  run_canaries.py
scripts/contract/: complete_gate.py  completion.schema.json  freeze.py  readiness_check_prompt.md  record_readiness.py  spawn_verifier.py  start_gate.py  tiers.py  validate_completion.py  verifier.py
scripts/tests/: test_cli_source.py  test_floor_anchor.py  test_floor_check.py  test_integration.py  test_transform.py
skills/: README.md
skills/assess/: SKILL.md  pyproject.toml
skills/assess/references/: actions-schema.md  consent-lifecycle.md  monorepo-scoping.md  uninstall.md
skills/assess/scripts/: assess_core.py  assess_emit_workflow.py  assess_finalize.py  assess_gate.py  assess_report.py  complexity-treemap.py  doc-graph-svg.py  docs-staleness-treemap.py
skills/assess/scripts/lib/: README.md  __init__.py  accretion_ratchet.py  agent_instructions_grader.py  agent_ops.py  anomaly_detector.py  archetype.py  assess_config.py  badge.py  change_coupling.py  ci_workflow.py  coupling_analysis.py  coverage_report.py  decline_markers.py  doc_complexity_join.py  doc_graph.py  doc_provenance.py  doc_staleness.py  git_churn.py  interactivity.py  jvm_capabilities.py  keyhole_signals.py  liveness_scan.py  ownership_parser.py  promissory_markers.py  raw_source.py  stats_diff.py  structure_drift.py  structure_graph.py  test_focus.py  test_pressure.py  treemap_render.py  understanding_analysis.py  vault_queries.py  wiki_writer.py
skills/assess/scripts/lib/test_pressure/: __init__.py  aggregate.py  common.py  heuristics.py  mutation.py
skills/assess/templates/: assess-gate.yml.template  hotspot.md.template  index.md.template  log_entry.md.template
skills/assess/tests/: README.md  conftest.py  golden.py  test_accretion_ratchet.py  test_accretion_ratchet_threshold.py  test_action_contract.py  test_agent_instructions_grader.py  test_agent_ops.py  test_anomaly_detector.py  test_archetype.py  test_assess_core.py  test_assess_finalize.py  test_assess_gate.py  test_assess_report.py  test_badge.py  test_change_coupling.py  test_ci_workflow.py  test_complexity_treemap.py  test_coupling_analysis.py  test_coverage_report.py  test_decline_markers.py  test_decomposition_parity.py  test_doc_complexity_join.py  test_doc_graph.py  test_doc_graph_svg.py  test_doc_provenance.py  test_doc_staleness.py  test_emit_workflow.py  test_git_churn.py  test_git_commit_info.py  test_golden_baseline.py  test_golden_svg_render.py  test_hotspot_orphan_invariant.py  test_instruction_bloat.py  test_interactivity.py  test_jvm_capabilities.py  test_keyhole_signals.py  test_liveness_scan.py  test_ownership_parser.py  test_promissory_markers.py  (+14 more)
skills/assess/tests/fixtures/: bad_instructions.md  coverage.xml  current_stats.json  good_instructions.md  lcov.info  monolithic_instructions.md  mutmut-junitxml.xml  prior_stats.json
skills/assess/tests/fixtures/golden/: assess-report-baseline.md  decomposition-parity-report.md  run-context-baseline.json
skills/assess/tests/fixtures/golden-doc-repo/: FIXTURE.md  README.md  guide.md  old.md
skills/assess/tests/fixtures/golden-svg-repo/: README.md  complex_stable.py  simple_stable.py
skills/assess/tests/fixtures/hollow_test_repo/src/: processor.py
skills/assess/tests/fixtures/hollow_test_repo/tests/: test_processor.py
skills/assess/tests/fixtures/honest_test_repo/tests/: test_processor.py
skills/assess/tests/fixtures/lean_with_skills/: CLAUDE.md
skills/assess/tests/fixtures/lean_with_skills/.claude/skills/go-conventions/: SKILL.md
skills/assess/tests/fixtures/lean_with_skills/.claude/skills/java-conventions/: SKILL.md
skills/assess/tests/fixtures/maven_project/: Sample.java  dependency-analyze-output.txt  pom.xml
skills/assess/tests/fixtures/structure_drift/: ARCHITECTURE_modules.md  codeowners_empty  codeowners_mixed
tests/: test_ghreport.py  test_ghsync_porcelain.py  test_plugin_contract.py  test_skill_forge_instruction_files.py
(+101 files in other folders)
