[project]
name = "standalone-skill-pipeline"
version = "0.1.0"
description = "Build pipeline for standalone skill ZIPs"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Mirror the skills/assess gate (issue #77): Ruff's default E4/E7/E9 + F rules
# plus the mccabe complexity ratchet. build_standalone_skill_zip (ccn 17)
# carries an explicit ``# noqa: C901``; the gate fails the moment any other
# function regresses past the threshold.
select = ["E4", "E7", "E9", "F", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15
