[project]
name = "assess"
version = "0.1.0"
description = "Deterministic core for /assess skill"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "grimp>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-v --tb=short"
# Fixture repos under tests/fixtures/ contain test_*.py files that are scanned
# as *data* by the test_pressure heuristics, not run as pytest tests. They
# import from their own `src/` package which isn't on the path, so collecting
# them errors. Exclude the whole fixtures tree from collection.
norecursedirs = ["tests/fixtures"]
